Add ws support [Started #184950513]

--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^15.1.5",
-    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0"
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@types/cors": "^2.8.13",
+    "cors": "^2.8.5",
+    "http-proxy-middleware": "^2.0.6"
   },
   "dependencies": {
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ws": "^8.13.0"
   }
 }
