--- a/backend/package.json
+++ b/backend/package.json
@@ -29,10 +29,12 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.0",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/ws": "^8.5.4",
     "@types/yamljs": "^0.2.31",
     "chance": "^1.1.11",
     "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "ws": "^8.13.0"
   }
 }
