--- a/backend/package.json
+++ b/backend/package.json
@@ -27,11 +27,13 @@
     "@types/body-parser-xml": "^2.0.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-ws": "^3.0.1",
     "@types/node": "^18.15.0",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/ws": "^8.5.4",
     "@types/yamljs": "^0.2.31",
     "chance": "^1.1.11",
+    "express-ws": "^5.0.2",
     "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
