--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4",
     "daisyui": "^2.51.5",
     "vue": "^3.2.47",
+    "vue-google-signin-button": "^1.0.4",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
   },
