As a user, I want to see immediately when other user is modifying data (WS and Vuex) [Delivers #184950513]

--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^15.1.5",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@types/body-parser-xml": "^2.0.2",
     "@types/cors": "^2.8.13",
     "cors": "^2.8.5",
     "http-proxy-middleware": "^2.0.6"
   },
   "dependencies": {
+    "express-ws": "^5.0.2",
+    "sax": "^1.2.4",
     "ts-node": "^10.9.1",
+    "vuex": "^4.1.0",
     "ws": "^8.13.0"
   }
 }
