--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "express-ws": "^5.0.2",
     "sax": "^1.2.4",
     "ts-node": "^10.9.1",
-    "vuex": "^4.1.0",
-    "ws": "^8.13.0"
-    "ts-node": "^10.9.1",
     "vuejs-text-logger": "^0.0.6",
-    "winston": "^3.8.2"
+    "vuex": "^4.1.0",
+    "winston": "^3.8.2",
+    "ws": "^8.13.0"
   }
 }
