Make installation easier by making a script [Delivers #185307686]

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 VITE_API_BASE_URL=https://localhost:3000
 
 # Set Google Client ID
-export GOOGLE_CLIENT_ID=668250301704-q7j4t8tnkmk88j3d6jsrkujt74311unb.apps.googleusercontent.com
+export GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID
