--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "@types/body-parser-xml": "^2.0.2",
     "@types/cors": "^2.8.13",
+    "@types/uuid": "^9.0.1",
     "cors": "^2.8.5",
     "http-proxy-middleware": "^2.0.6"
   },
