--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "daisyui": "^2.51.5",
     "vue": "^3.2.47",
     "vue-router": "^4.0.13",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vue-google-signin-button": "^1.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
