--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "express-ws": "^5.0.2",
+    "google-auth-library": "^8.8.0",
     "sax": "^1.2.4",
     "ts-node": "^10.9.1",
+    "vue-google-signin-button": "^1.0.4",
     "vuejs-text-logger": "^0.0.6",
     "vuex": "^4.1.0",
     "winston": "^3.8.2",
