--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "google-auth-library": "^8.8.0",
     "nodemon": "^2.0.21",
+    "sax": "^1.2.4",
     "swagger-ui-express": "^4.6.2",
+    "uuid": "^9.0.0",
+    "winston": "^3.9.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
@@ -30,6 +34,7 @@
     "@types/express-ws": "^3.0.1",
     "@types/node": "^18.15.0",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.1",
     "@types/ws": "^8.5.4",
     "@types/yamljs": "^0.2.31",
     "chance": "^1.1.11",
