--- a/package.json
+++ b/package.json
@@ -14,20 +14,7 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^15.1.5",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
-    "@types/body-parser-xml": "^2.0.2",
-    "@types/cors": "^2.8.13",
-    "cors": "^2.8.5",
-    "http-proxy-middleware": "^2.0.6"
-  },
-  "dependencies": {
-    "express-ws": "^5.0.2",
-    "google-auth-library": "^8.8.0",
-    "sax": "^1.2.4",
-    "ts-node": "^10.9.1",
-    "vue-google-signin-button": "^1.0.4",
-    "vuejs-text-logger": "^0.0.6",
-    "vuex": "^4.1.0",
-    "winston": "^3.8.2",
-    "ws": "^8.13.0"
+    "cypress": "^12.13.0",
+    "ts-node": "^10.9.1"
   }
 }
