--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "axios": "^1.3.4",
     "daisyui": "^2.51.5",
+    "vite-project": "file:..",
     "vue": "^3.2.47",
+    "vue-google-signin-button": "^1.0.4",
     "vue-router": "^4.0.13",
-    "vuex": "^4.1.0",
-    "vue-google-signin-button": "^1.0.4"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
