--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "install": "node runInstall.js",
     "dev": "node runDev.js",
-    "test": "npx cypress open"
+    "test": "npx cypress open -b chrome --e2e"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,6 @@
     "ts-node": "^10.9.1"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "xml-js": "^1.6.11",
     "xml2js": "^0.6.0"
   }
 }
