--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "cypress": "^12.13.0",
     "ts-node": "^10.9.1"
+  },
+  "dependencies": {
+    "xml-js": "^1.6.11"
   }
 }
