--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npx cypress open"
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "cypress": "^12.14.0",
     "daisyui": "^2.51.5",
     "vite-project": "file:..",
     "vue": "^3.2.47",
