--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "uuid": "^9.0.0",
     "vite-project": "file:..",
     "winston": "^3.9.0",
+    "xml2js": "^0.6.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
