--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "cypress": "^12.13.0",
     "ts-node": "^10.9.1"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.6.0"
   }
 }
