--- a/package.json
+++ b/package.json
@@ -6,18 +6,29 @@
   "scripts": {
     "install": "node runInstall.js",
     "dev": "node runDev.js",
-    "test": "npx cypress open"
+    "test": "npx cypress open",
+    "test:unit": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@badeball/cypress-cucumber-preprocessor": "^15.1.5",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@vue/test-utils": "^2.3.2",
+    "@vue/vue3-jest": "^28.1.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.5.0",
     "cypress": "^12.13.0",
-    "ts-node": "^10.9.1"
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
+    "jest-environment-jsdom": "^29.5.0",
     "xml-js": "^1.6.11",
     "xml2js": "^0.6.0"
   }
