--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/preset-typescript": "^7.22.5",
     "@badeball/cypress-cucumber-preprocessor": "^15.1.5",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@jest/globals": "^29.5.0",
+    "@types/jest": "^29.5.2",
     "@vue/test-utils": "^2.3.2",
     "@vue/vue3-jest": "^28.1.0",
     "babel-core": "^7.0.0-bridge.0",
