--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "install": "node runInstall.js",
     "dev": "node runDev.js",
-    "test": "npx cypress open -b chrome --e2e"
+    "test": "npx cypress open -b chrome --e2e",
+    "test:unit": "jest"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +15,13 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^15.1.5",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@types/jest": "^29.5.2",
+    "@vue/test-utils": "^2.4.0-alpha.2",
     "cypress": "^12.13.0",
-    "ts-node": "^10.9.1"
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "ts-node": "^10.9.1",
+    "vue-jest": "^5.0.0-alpha.10"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
