WIP Update jest, ts-jest, babel-jest versions to @latest to support ESM. Update jest.config.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "dom",
       "es2015.promise"
     ],
-    "module": "commonjs",
+    "module": "es2020",
+    "moduleResolution": "node",
     "baseUrl": "./",
     "types": [
       "cypress",
