--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@types/jest": "^29.5.2",
     "@vue/test-utils": "^2.4.0-alpha.2",
     "cypress": "^12.13.0",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.6",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "vue-jest": "^5.0.0-alpha.10"
   },
   "dependencies": {
+    "babel-jest": "^29.5.0",
     "body-parser": "^1.20.2",
     "xml-js": "^1.6.11",
     "xml2js": "^0.6.0"
