--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^15.1.5",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@vue/test-utils": "^2.4.0-alpha.2",
     "cypress": "^12.13.0",
@@ -25,7 +26,11 @@
   },
   "dependencies": {
     "babel-jest": "^29.5.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "prisma": "^4.15.0",
+    "vue-router": "^4.2.2",
     "xml-js": "^1.6.11",
     "xml2js": "^0.6.0"
   }
