--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^15.1.5",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@types/express-xml-bodyparser": "^0.3.2",
     "cypress": "^12.13.0",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "express-xml-bodyparser": "^0.3.0",
     "xml-js": "^1.6.11",
     "xml2js": "^0.6.0"
   }
