--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@vue/test-utils": "^2.4.0-alpha.2",
     "cypress": "^12.13.0",
     "jest": "^29.5.0",
+    "jest-mock-extended": "^3.0.4",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "vue-jest": "^5.0.0-alpha.10"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.0",
     "babel-jest": "^29.5.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
